--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="bg-white shadow-xl rounded-2xl p-8 max-w-2xl w-full">
         <h1 class="text-4xl font-extrabold text-center text-gray-800 mb-6">
-            Mis Documentos
+            Documentos Para certificacion CompTIA
         </h1>
         <p class="text-center text-gray-500 mb-8">
             Haz clic en cualquiera de los enlaces para acceder a un documento.
