--- a/cybersecurity_presentation.html
+++ b/cybersecurity_presentation.html
@@ -127,6 +127,9 @@
             transform: scale(1.05);
         }
 
+        a:visited {
+      color: white; /* Color para enlaces visitados */
+    }
         .nav-btn:disabled {
             background: #666;
             cursor: not-allowed;
@@ -1160,8 +1163,9 @@
     </div>
 
     <!-- Navegación -->
+     
     <div class="navigation">
-        <a href="index.html"><button class="nav-btn">Volver inicio</button"></a>
+        <a href="index.html" fontcolor="white" ><button class="nav-btn">Volver inicio</button"></a>
         <button class="nav-btn" id="prevBtn" onclick="changeSlide(-1)">← Anterior</button>
         <button class="nav-btn" id="nextBtn" onclick="changeSlide(1)">Siguiente →</button>
     </div>
